Fix unreadable dropdown on scryportal page

--- a/src/projects/ScryPortal/ScryPortal.css
+++ b/src/projects/ScryPortal/ScryPortal.css
@@ -18,7 +18,7 @@
 }
 
 .Scryportal-Appbar a:hover {
-    color: #282c34;
+    color: #49505f;
 }
 
 .Scryportal-Appbar > button {
@@ -70,7 +70,7 @@
 }
 
 .Scryportal-Dropdown {
-    background-color: #bdb6c6;
+    background-color: #282c34;
     position: absolute;
     width: 56;
     border-radius: 50;
